[gd_scene load_steps=36 format=3 uid="uid://0i5shylujcc5"]

[ext_resource type="Shader" path="res://miscellaneous/enemy_flash.gdshader" id="1_dmxkx"]
[ext_resource type="Texture2D" uid="uid://dyc0vu5re5awq" path="res://aisles/bosses/watermelon/art/watermelon_boss.png" id="1_fpio1"]
[ext_resource type="Script" path="res://aisles/bosses/watermelon/watermelon_boss.gd" id="1_ngode"]
[ext_resource type="PackedScene" uid="uid://dfsj6cpisvgbu" path="res://components/scenes/boss_health_component.tscn" id="2_k0fwf"]
[ext_resource type="PackedScene" uid="uid://d165eow85pjqq" path="res://components/scenes/enemy_hitbox.tscn" id="3_e2dmb"]
[ext_resource type="PackedScene" uid="uid://bvr04i1rtrr5n" path="res://components/scenes/enemy_hurtbox.tscn" id="4_eh7i5"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHSpawnPoint.gd" id="7_fuxdo"]
[ext_resource type="Script" path="res://aisles/bosses/watermelon/watermelon_attack_pattern.gd" id="7_qmue4"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHPattern.gd" id="8_us17a"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternCircle.gd" id="9_i7o7t"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternOne.gd" id="10_6uube"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHBulletProperties.gd" id="10_lr81h"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/animStates.gd" id="11_4vpbf"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/BulletProps.gd" id="12_ppqpq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5yl4"]
shader = ExtResource("1_dmxkx")
shader_parameter/flash_amount = 0.0

[sub_resource type="Animation" id="Animation_csvsl"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_p8f05"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wlj5f"]
_data = {
"active": SubResource("Animation_csvsl"),
"inactive": SubResource("Animation_p8f05")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v63db"]
radius = 64.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_sqkuf"]
radius = 67.3647

[sub_resource type="CircleShape2D" id="CircleShape2D_t3ysf"]
radius = 81.0062

[sub_resource type="Curve2D" id="Curve2D_sqofg"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_5y678"]
resource_name = "PatternCircle"
script = ExtResource("9_i7o7t")
radius = 0.0
angle_total = 6.28319
angle_decal = 0.0
center = 0
perspective = 1.0
symmetric = false
bullet = "watermelon_slice"
nbr = 32
iterations = 1
cooldown_spawn = 1.0
cooldown_shoot = 0.0
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
cooldown_layers = PackedVector2Array()
cooldown_stasis = false
on_interruption = 0
pattern_angle = 0.0
pattern_angle_target = NodePath("")
pattern_angle_mouse = false
wait_behavior = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
impulse = 0
bullet_list = Array[String]([])
skip_step = 0
skip_list = Array[PackedInt32Array]([])
skip_in_list = true

[sub_resource type="Curve2D" id="Curve2D_wj05x"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_43i2m"]
resource_name = "PatternOne"
script = ExtResource("10_6uube")
bullet = "watermelon_seed_1"
nbr = 1
iterations = 300
cooldown_spawn = 0.06
cooldown_shoot = 0.0
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
cooldown_layers = PackedVector2Array()
cooldown_stasis = false
on_interruption = 0
pattern_angle = 0.0
pattern_angle_target = NodePath("")
pattern_angle_mouse = false
wait_behavior = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
impulse = 0
bullet_list = Array[String]([])
skip_step = 0
skip_list = Array[PackedInt32Array]([])
skip_in_list = true

[sub_resource type="Curve2D" id="Curve2D_n8y5p"]

[sub_resource type="Curve" id="Curve_wclf3"]

[sub_resource type="Resource" id="Resource_8ew7j"]
script = ExtResource("11_4vpbf")
ID = "watermelon_slice"
texture = "watermelon_slice"
collision = "grape_mini"
SFX = ""
tex_scale = 1.0
tex_skew = 0.0

[sub_resource type="Curve" id="Curve_ba13h"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_dr5w2"]
script = ExtResource("12_ppqpq")
damage = 1.0
speed = 200.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
custom_data = {
"test": Vector3(0, 2, 3)
}
death_after_time = 3.5
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
death_speed_under = 0.0
death_culling_overwrite = 3
spec_modulate_loop = 0.0
no_rotation = false
anim_idle = SubResource("Resource_8ew7j")
anim_spawn = SubResource("Resource_8ew7j")
anim_shoot = SubResource("Resource_8ew7j")
anim_waiting = SubResource("Resource_8ew7j")
anim_delete = SubResource("Resource_8ew7j")
anim_more = Array[ExtResource("11_4vpbf")]([])
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_trail_fade_out = false
spec_trail_thin_out = false
spec_trail_smooth = 0.03
a_direction_equation = ""
a_angular_equation = ""
a_curve_movement = 0
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
a_speed_multiplier = SubResource("Curve_wclf3")
depth_active = Vector2(0, 0)
depth_spawn = 0.0
depth_speed = 100.0
depth_min_max = Vector2(-300, 100)
depth_bounce = false
depth_fading = false
depth_scaling = true
spec_bounces = 0
spec_no_collision = false
spec_rotating_speed = 0.0
spec_only_spin_sprite = true
spec_weight = 1.0
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_ba13h")
scale_multi_scale = 1.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0.0
homing_time_start = 0.0
homing_duration = 999.0
homing_detection_dist = 0.0
homing_start_signal = ""
homing_range = Vector2(9999, 20)
homing_imprecision = Vector2(0, 0)
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[sub_resource type="Curve2D" id="Curve2D_sh4u4"]

[sub_resource type="Curve" id="Curve_rk2pf"]

[sub_resource type="Resource" id="Resource_gl8yo"]
script = ExtResource("11_4vpbf")
ID = "watermelon_seed"
texture = "watermelon_seed"
collision = "watermelon_seed"
SFX = ""
tex_scale = 1.0
tex_skew = 0.0

[sub_resource type="Curve" id="Curve_hq0s5"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_mu4dj"]
script = ExtResource("12_ppqpq")
damage = 1.0
speed = 150.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
custom_data = {
"test": Vector3(0, 2, 3)
}
death_after_time = 10.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
death_speed_under = 0.0
death_culling_overwrite = 3
spec_modulate_loop = 0.0
no_rotation = false
anim_idle = SubResource("Resource_gl8yo")
anim_spawn = SubResource("Resource_gl8yo")
anim_shoot = SubResource("Resource_gl8yo")
anim_waiting = SubResource("Resource_gl8yo")
anim_delete = SubResource("Resource_gl8yo")
anim_more = Array[ExtResource("11_4vpbf")]([])
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_trail_fade_out = false
spec_trail_thin_out = false
spec_trail_smooth = 0.03
a_direction_equation = ""
a_angular_equation = ""
a_curve_movement = 0
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
a_speed_multiplier = SubResource("Curve_rk2pf")
depth_active = Vector2(0, 0)
depth_spawn = 0.0
depth_speed = 100.0
depth_min_max = Vector2(-300, 100)
depth_bounce = false
depth_fading = false
depth_scaling = true
spec_bounces = 0
spec_no_collision = false
spec_rotating_speed = 0.0
spec_only_spin_sprite = true
spec_weight = 1.0
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_hq0s5")
scale_multi_scale = 1.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 3
homing_group = "player"
homing_select_in_group = 0
homing_steer = 110.0
homing_time_start = 0.01
homing_duration = 5.0
homing_detection_dist = 250.0
homing_start_signal = ""
homing_range = Vector2(9999, 20)
homing_imprecision = Vector2(20, 20)
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[node name="WatermelonBoss" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "sprite", "attack_pattern")]
position = Vector2(350, 0)
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_ngode")
animation_player = NodePath("Sprite2D/AnimationPlayer")
sprite = NodePath("Sprite2D")
attack_pattern = NodePath("AttackPattern")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_i5yl4")
texture = ExtResource("1_fpio1")
hframes = 3
vframes = 2
frame = 1
metadata/_aseprite_wizard_config_ = {
"i_mode": 0,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/watermelon/art",
"o_name": "watermelon_boss",
"only_visible": false,
"player": "Sprite2D/AnimationPlayer",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/watermelonboss/watermelon_boss.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "11ef6edc40505b7793f8f4075c571763"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_wlj5f")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 12)
shape = SubResource("CircleShape2D_v63db")

[node name="BossHealthComponent" parent="." instance=ExtResource("2_k0fwf")]
max_health = 25000.0
boss_cutscene_animation_string = "watermelon"

[node name="EnemyHitbox" parent="." instance=ExtResource("3_e2dmb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(-1, 13)
shape = SubResource("CircleShape2D_sqkuf")

[node name="EnemyHurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_eh7i5")]
health_component = NodePath("../BossHealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_t3ysf")

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(-40, 17)
rotation = -1.0472
scale = Vector2(-1, -1)
script = ExtResource("7_fuxdo")
active = false
auto_pattern_id = "watermelon_seed_1"
pool_amount = 100
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="SpawnPattern" type="Node2D" parent="."]

[node name="WatermelonAttack1" type="Path2D" parent="SpawnPattern"]
curve = SubResource("Curve2D_sqofg")
script = ExtResource("8_us17a")
id = "watermelon_attack_1"
pattern = SubResource("NavigationPolygon_5y678")

[node name="SeedAttack1" type="Path2D" parent="SpawnPattern"]
curve = SubResource("Curve2D_wj05x")
script = ExtResource("8_us17a")
id = "watermelon_seed_1"
pattern = SubResource("NavigationPolygon_43i2m")

[node name="BulletPattern" type="Node2D" parent="."]

[node name="WatermelonSlice" type="Path2D" parent="BulletPattern"]
curve = SubResource("Curve2D_n8y5p")
script = ExtResource("10_lr81h")
id = "watermelon_slice"
props = SubResource("PackedDataContainer_dr5w2")

[node name="SeedNoHome" type="Path2D" parent="BulletPattern"]
curve = SubResource("Curve2D_sh4u4")
script = ExtResource("10_lr81h")
id = "watermelon_seed_1"
props = SubResource("PackedDataContainer_mu4dj")

[node name="AttackPattern" type="Node2D" parent="." node_paths=PackedStringArray("burst_timer", "attack_1", "spawnpoint_seed")]
script = ExtResource("7_qmue4")
burst_timer = NodePath("Attack1Burst")
attack_1 = NodePath("Attack1")
spawnpoint_seed = NodePath("../SpawnPoint")

[node name="Attack1" type="Timer" parent="AttackPattern"]
wait_time = 4.0

[node name="Attack1Burst" type="Timer" parent="AttackPattern"]
wait_time = 0.3
one_shot = true

[node name="AttackSwitch" type="Timer" parent="AttackPattern"]
wait_time = 19.0

[connection signal="timeout" from="AttackPattern/Attack1" to="AttackPattern" method="_on_attack_1_timeout"]
[connection signal="timeout" from="AttackPattern/AttackSwitch" to="AttackPattern" method="_on_attack_switch_timeout"]
